--- a/src/components/HomepageFeatures.module.css
+++ b/src/components/HomepageFeatures.module.css
@@ -6,7 +6,7 @@
 
 .featureSvg {
   padding: 2px;
-  width: 120px;
-  height: 120px;
-  margin-top: 10px;
+  width: 160px;
+  height: 160px;
+  /* margin-top: 10px; */
 }
