--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -61,20 +61,23 @@
   --ifm-button-border-radius: 0;
 
   --ifm-navbar-height: 5rem;
+  --ifm-navbar-shadow: transparent;
 
   --ifm-alert-border-left-width: 2pt;
   --ifm-alert-border-width: 2pt;
   --ifm-alert-border-radius: 0;
   --ifm-alert-shadow: transparent;
 
-  --n4c-button-width: 270px;
-  --n4c-button-height: 230px;
+  --n4c-button-width: 250px;
+  --n4c-button-height: 240px;
 
   --n4c-button-secondary-width: 300px;
 
   --n4c-button-vpad: 10px;
   --n4c-button-hpad: 5px;
-  
+    
+  --n4c-hover-scale: 110%;
+  --n4c-transform-time: 175ms;
 
   --ifm-font-size-base: 110%;
 }
@@ -85,6 +88,16 @@
 
 .navbar__logo img {
   height: 110%;
+}
+
+.navbar {
+  background-color: var(--ifm-navbar-background-color);
+  border-bottom: 1px solid black;
+  box-shadow: var(--ifm-navbar-shadow);
+  display: flex;
+  height: var(--ifm-navbar-height);
+  padding: var(--ifm-navbar-padding-vertical)
+    var(--ifm-navbar-padding-horizontal);
 }
 
 .docusaurus-highlight-code-line {
@@ -139,6 +152,7 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
   --ifm-footer-link-color: var(--ifm-color-white);
   --ifm-footer-title-color: var(--ifm-color-white);
   font-weight: unset;
+  border-top: 1px solid white;
 }
 
 .footer__title {
@@ -237,20 +251,20 @@ margin-bottom: var(--ifm-heading-margin-bottom);
 
 
 .button--primary {
-  --ifm-button-border-color: white;
+  /* --ifm-button-border-color: white; */
 }
 
 .button--primary:not(.button--outline) {
     --ifm-button-background-color: var(--ifm-color-primary);
-    --ifm-button-border-color: white;
+    /* --ifm-button-border-color: white; */
   }
 
 
   .button--primary:not(.button--outline):hover {
     /* --ifm-button-background-color: var(--ifm-color-danger); */
-    --ifm-button-border-color: white;
-    transform: scale(1.05);
-    transition: transform 300ms ease-in-out;
+    /* --ifm-button-border-color: white; */
+    transform: scale(var(--n4c-hover-scale));
+    transition: transform var(--n4c-transform-time) ease-in-out;
   }
 
 /* Increase specificity. */
@@ -279,8 +293,8 @@ margin-bottom: var(--ifm-heading-margin-bottom);
 .button--secondary:not(.button--outline):hover {
 /*   --ifm-button-background-color: var(--ifm-color-danger); */
   --ifm-button-border-color: var(--ifm-color-primary);
-  transform: scale(1.05);
-  transition: transform 175ms ease-in-out;
+  transform: scale(var(--n4c-hover-scale));
+  transition: transform var(--n4c-transform-time) ease-in-out;
 }
 
 
@@ -333,6 +347,41 @@ margin-bottom: var(--ifm-heading-margin-bottom);
   color: var(--ifm-color-white);
   text-align: left;
   font-weight: 300;
+  white-space: normal;
+  word-wrap: break-word;
+}
+
+
+.button--negative {
+  --ifm-button-background-color: var(--ifm-color-white);
+}
+
+.button--negative:not(.button--outline) {
+  --ifm-button-background-color: var(--ifm-color-white);
+  border-radius: 10px;
+}
+
+.button--negative:not(.button--outline):hover {
+/*   --ifm-button-background-color: var(--ifm-color-danger); */
+  transform: scale(var(--n4c-hover-scale));
+  transition: transform var(--n4c-transform-time) ease-in-out;
+}
+
+
+.button.button--negative {
+  color: var(--ifm-color-primary);
+  font-weight: 300;
+}
+
+.button.button--negative h1,
+.button.button--negative h2,
+.button.button--negative h3,
+.button.button--negative h4,
+.button.button--negative h5,
+.button.button--negative h6,
+.button.button--negative a {
+  color: var(--ifm-color-primary);
+  text-align: left;
   white-space: normal;
   word-wrap: break-word;
 }
