fix: button hover decoration

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -265,12 +265,12 @@ margin-bottom: var(--ifm-heading-margin-bottom);
   }
 
 
-  .button--primary:not(.button--outline):hover {
-    /* --ifm-button-background-color: var(--ifm-color-danger); */
-    /* --ifm-button-border-color: white; */
-    transform: scale(var(--n4c-hover-scale));
-    transition: transform var(--n4c-transform-time) ease-in-out;
-  }
+.button--primary:not(.button--outline):hover {
+  /* --ifm-button-background-color: var(--ifm-color-danger); */
+  /* --ifm-button-border-color: white; */
+  transform: scale(var(--n4c-hover-scale));
+  transition: transform var(--n4c-transform-time) ease-in-out;
+}
 
 /* Increase specificity. */
 
@@ -413,7 +413,12 @@ a:hover {
     /* autoprefixer: ignore next */
     text-decoration: var(--ifm-link-hover-decoration);
   /*  text-decoration-thickness: 2px;*/
-  }
+}
+
+a.button:hover {
+  color: white;
+  text-decoration: unset;
+}
 
 a:not([href]) {
     text-decoration: none;
