chore: adapt table format

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -55,9 +55,9 @@
   --ifm-link-hover-decoration: underline;
   --ifm-footer-link-hover-color: var(--ifm-color-danger);
 
-
-  
-
+  --ifm-table-border-width: 0;
+  --ifm-table-head-background: var(--ifm-color-primary);
+  --ifm-table-head-color: white;
 
   --ifm-hero-text-color: white;
   
@@ -574,3 +574,10 @@ ul li::marker {
 ul ul {
   list-style-type: '\2B21\  ';
 } 
+
+
+/* Tables */
+
+table thead tr {
+  border-bottom: none;
+}
