--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -578,6 +578,10 @@ ul ul {
 
 /* Tables */
 
+table {
+  border-bottom: 2px solid var(--ifm-color-primary);
+}
+
 table thead tr {
   border-bottom: none;
 }
