--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,7 +14,7 @@
   --ifm-color-primary-dark: var(--ifm-color-primary);
   --ifm-color-primary-darker: var(--ifm-color-primary);
   --ifm-color-primary-darkest: var(--ifm-color-primary);
-  --ifm-color-primary-light: var(--ifm-color-primary);
+  --ifm-color-primary-light: #009cbc;
   --ifm-color-primary-lighter: var(--ifm-color-primary);
   --ifm-color-primary-lightest: var(--ifm-color-primary);
   --ifm-code-font-size: 95%;
@@ -41,6 +41,13 @@
   --ifm-color-success-light: var(--ifm-color-success);
   --ifm-color-success-lighter: var(--ifm-color-success);
   --ifm-color-success-lightest: var(--ifm-color-success);
+  --ifm-color-info: #009cbc;
+  --ifm-color-info-dark: var(--ifm-color-info);
+  --ifm-color-info-darker: var(--ifm-color-info);
+  --ifm-color-info-darkest: var(--ifm-color-info);
+  --ifm-color-info-light: var(--ifm-color-info);
+  --ifm-color-info-lighter: var(--ifm-color-info);
+  --ifm-color-info-lightest: var(--ifm-color-info);
   --ifm-color-caution: #f1de1e;
   --ifm-color-caution-dark: var(--ifm-color-caution);
   --ifm-color-caution-darker: var(--ifm-color-caution);
@@ -599,8 +606,8 @@ table thead tr {
 
 .block_lbe {
   padding: 10px;
-  box-shadow: 2px 2px 8px #eee;
-  border: 1px solid var(--n4c-navbar-border);
+  /* box-shadow: 2px 2px 8px #eee; */
+  border: 1px dashed var(--ifm-color-primary);
   margin: 15px 0px;
   transition: all var(--n4c-transform-time) ease-in-out;
 }
@@ -613,12 +620,13 @@ table thead tr {
 .details_lbe {
   display: flex; 
   overflow: hidden;
-  border: 1px dashed var(--ifm-color-primary);
+  border: 1px solid var(--ifm-color-primary);
   padding: 15px;
   transition: all var(--n4c-transform-time) ease-in-out;
 }
 
 .details_lbe h4 {
+  color: var(--ifm-color-primary);
   padding-top: 15px;
   transition: all var(--n4c-transform-time) ease-in-out;
 }
