chore: improve tag button appearance

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -783,11 +783,13 @@ table thead tr {
 }
 
 .lbe_tag_secondary {
-  background: var(--ifm-color-secondary);
+  background: var(--ifm-breadcrumb-item-background-active);
+  color: var(--ifm-color-primary);
 }
 
 .lbe_tag_active {
   background: var(--ifm-color-danger);
+  color: white;
 }
 
 /* .lbe_tag {
