chore: implement local hosting of fonts

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,7 +7,10 @@
 
 /* You can override the default Infima variables here. */
 
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap');
+/* For local testing */
+
+/* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap'); */
+
 
 :root {
   --ifm-color-primary: #00617c; 
