--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -11,6 +11,7 @@
 
 /* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap'); */
 
+@import url('../css/fonts.css');
 
 :root {
   --ifm-color-primary: #00617c; 
